--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Roy",
   "license": "MIT",
   "dependencies": {
+    "node-sass": "^4.9.4",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "zent": "^6.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -24,6 +26,7 @@
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "^0.13.2",
+    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
